fixing alignment in mobile hamburger menu

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,8 +1,6 @@
 @media only screen and (max-width: 767px) {
   #typewriter {
-    font-size: 2.3rem; }
-  #about-content {
-    padding: 0.5rem; } }
+    font-size: 2.3rem; } }
 
 *,
 *::after,
@@ -88,7 +86,6 @@ a {
   text-decoration: underline;
   text-decoration-color: #03957d;
   text-decoration-thickness: 0.375rem;
-  padding-bottom: 2rem;
   text-underline-position: under;
   text-align: center; }
 
@@ -105,6 +102,11 @@ p {
   font-weight: 600;
   font-size: 0.8rem;
   color: #f0f0f0; }
+  .nav-item #btn--blog {
+    text-transform: inherit;
+    font-size: inherit;
+    color: inherit;
+    font-weight: inherit; }
 
 .banner-text {
   color: #f0f0f0; }
@@ -155,14 +157,12 @@ header {
   header #Logo {
     max-height: 1.8rem; }
   header #btn--blog {
-    transform: translateY(-0.3rem);
-    margin-left: 0.3rem; }
+    transform: translateY(0.4rem); }
   header .active-nav a,
   header .active-nav a:hover {
     text-decoration: underline;
     text-decoration-color: #03957d;
     text-decoration-thickness: 0.2rem;
-    padding-bottom: 2rem;
     text-underline-position: under; }
   header .banner {
     display: inline-block;
