--- a/src/styles/scss/abstract/_mixins.scss
+++ b/src/styles/scss/abstract/_mixins.scss
@@ -10,6 +10,5 @@
   text-decoration: underline;
   text-decoration-color: $accent-color;
   text-decoration-thickness: $thickness;
-  padding-bottom: $spacer;
   text-underline-position: under;
 }
