--- a/src/styles/scss/layout/_header.scss
+++ b/src/styles/scss/layout/_header.scss
@@ -39,8 +39,7 @@ header {
   }
 
   #btn--blog {
-    transform: translateY(-0.3rem);
-    margin-left: 0.3rem;
+    transform: translateY(0.4rem);
   }
 
   .active-nav {
